# gamekey-fullstack

./: README.md
gamekey-fullstack/: README.md  docker-compose.yml
gamekey-fullstack/backend/: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  seed_db.py
gamekey-fullstack/backend/gamekey_platform/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
gamekey-fullstack/backend/games/: admin.py  models.py  permissions.py  serializers.py  tasks.py  views.py  viewsets.py  webhooks.py
gamekey-fullstack/backend/games/management/commands/: check_expired_keys.py
gamekey-fullstack/backend/games/migrations/: 0001_initial.py
gamekey-fullstack/backend/games/tests/: test_webhook.py
gamekey-fullstack/frontend/: Dockerfile  README.md  angular.json  nginx.conf  package.json
gamekey-fullstack/frontend/old_node_modules_644822001/@angular-devkit/architect/: package.json
gamekey-fullstack/frontend/old_node_modules_644822001/@angular-devkit/build-angular/: package.json
gamekey-fullstack/frontend/old_node_modules_644822001/@angular-devkit/build-webpack/: package.json
gamekey-fullstack/frontend/old_node_modules_644822001/@angular-devkit/core/: package.json
gamekey-fullstack/frontend/old_node_modules_644822001/@angular-devkit/schematics/: package.json
gamekey-fullstack/frontend/src/: index.html  styles.css
gamekey-fullstack/frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
(+184 files in other folders)
