[project]
name = "gamekey-platform"
version = "0.1.0"
description = "GameKey Store backend: Django + DRF + Celery + Redis"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "python-decouple>=3.8",
    "celery>=5.4",
    "redis>=5.0",
    "django-cors-headers>=4.4",
    "requests>=2.32",
    "gunicorn>=22.0",
    "whitenoise>=6.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]
